Fixed the layout issues

--- a/website/main-pages/ballerina.io-website-theme/css/ballerina-io-api.css
+++ b/website/main-pages/ballerina.io-website-theme/css/ballerina-io-api.css
@@ -63,7 +63,7 @@ h2 {
 }
 
 .fw-struct.sm-icon {
-    margin-right: 10px;
+    margin-right: 5px;
     background-image: url("//b.content.wso2.com/sites/all/ballerina.io-cdn/img/construct-green.svg");
     width: 16px;
     height: 20px;
@@ -73,7 +73,7 @@ h2 {
     background-image: url("//b.content.wso2.com/sites/all/ballerina.io-cdn/img/function-green.svg");
     width: 16px;
     height: 24px;
-     margin-right: 10px;
+     margin-right: 5px;
 }
 
 
@@ -131,9 +131,14 @@ h2 span {
 .function-wrapper ul li {
 /*   padding: 30px 0;*/
 /*   border-bottom: 1px solid #000000;*/
-   border-top: 1px solid #d6d6d6;
+/*   border-top: 1px solid #d6d6d6;*/
 }
 
 .construct-wrapper {
     padding-right: 20px;
+}
+
+.construct-wrapper p {
+    margin-bottom: 10px;
+    margin-top: 5px;
 }
