--- a/website/main-pages/ballerina.io-website-theme/css/ballerina-io.css
+++ b/website/main-pages/ballerina.io-website-theme/css/ballerina-io.css
@@ -239,13 +239,14 @@
  a.cBallerina-io-Home-main-download-button:hover {
      background-color: #22b7b1;
      background-image: url("/img/download-bg-white.svg");
-     transition: all 0.2s ease 0s;
+/*     transition: all 0.2s ease 0s;*/
 }
  p.cBallerina-io-Home-OS {
      font-size: 12px;
      line-height: 20px;
      display: inline-block;
      margin-top: 10px;
+     margin-left: 1px;
 }
  .cBallerina-io-Home-main-content-wraper {
      padding: 0;
@@ -418,6 +419,13 @@
      font-family: "CalibreWeb-Semibold" !important;
      text-transform: uppercase;
 }
+
+#pdframe {
+height:1px!important;
+overflow:hidden!important;
+visibility:hidden!important
+}
+
  @media screen and (max-width: 768px) {
      .cBallerina-io-Gray-row {
          padding-top: 70px;
